--- a/sites/all/themes/newhopeks/less/page.less
+++ b/sites/all/themes/newhopeks/less/page.less
@@ -15,7 +15,7 @@
 	@media (min-width: @screen-sm) {
         padding-top: 71px; padding-top: 7.1rem;
 
-        .container {
+        .wrapper {
     	    margin-bottom: 20px;
             padding-bottom: 20px;
             border-bottom: 1px solid fade(@nh-brown, 20%);
@@ -54,7 +54,6 @@
 	    position: static;
 	    min-height: 0;
 	    margin: 0;
-	    padding: 0;
         background-color: @nh-brown;
 	    border: none;
 	    .font-size(18);
@@ -254,11 +253,22 @@
 	}
 
 	.main {
-	    background-color: white;
-	    border-top: 1px solid @nh-blue-light;
-	    border-bottom: 5px solid @nh-blue-light;
+
+    	.wrapper {
+    	    margin: 0 -10px;
+    	    padding: 10px;
+	        background-color: white;
+    	    border-top: 1px solid @nh-blue-light;
+    	    border-bottom: 5px solid @nh-blue-light;
+    	}
 
     	@media (min-width: @screen-sm) {
+
+    	    .wrapper {
+    	        margin: 0;
+                padding: 20px;
+    	    }
+
     	}
 
 	}
